--- a/credit_risk_resampling.ipynb
+++ b/credit_risk_resampling.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -235,17 +235,17 @@
        "4                 1       23000            0  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Read the CSV file from the Resources folder into a Pandas DataFrame\n",
-    "# YOUR CODE HERE!\n",
+    "lending_data_df = pd.read_csv('./Resources/lending_data.csv')\n",
     "\n",
     "# Review the DataFrame\n",
-    "# YOUR CODE HERE!"
+    "lending_data_df.head(5)"
    ]
   },
   {
@@ -257,22 +257,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Separate the data into labels and features\n",
     "\n",
     "# Separate the y variable, the labels\n",
-    "# YOUR CODE HERE!]\n",
+    "\n",
+    "# selecting loan status column as that is the feature of interest\n",
+    "y = lending_data_df['loan_status']\n",
     "\n",
     "# Separate the X variable, the features\n",
-    "# YOUR CODE HERE!"
+    "# dropping the features variables \n",
+    "X = lending_data_df.drop(columns = 'loan_status')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -286,19 +289,22 @@
        "Name: loan_status, dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Review the y variable Series\n",
-    "# YOUR CODE HERE!"
+    "# these are the features that we are performing the predictions on\n",
+    "# reviewing first 5 rows with .head() function\n",
+    "\n",
+    "y.head(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -402,14 +408,16 @@
        "4                 1       23000  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Review the X variable DataFrame\n",
-    "# YOUR CODE HERE!"
+    "# reviewing the first 5 rows with the .head() function\n",
+    "\n",
+    "X.head(5)"
    ]
   },
   {
@@ -421,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -432,14 +440,16 @@
        "Name: loan_status, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Check the balance of our target values\n",
-    "# YOUR CODE HERE!"
+    "# checing the counts of y labels with value_counts function\n",
+    "\n",
+    "y.value_counts()"
    ]
   },
   {
@@ -451,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +470,9 @@
     "\n",
     "# Split the data using train_test_split\n",
     "# Assign a random_state of 1 to the function\n",
-    "# YOUR CODE HERE!"
+    "# creating the X train, X test, Y train and Y test data for features and labels respectively\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state = 1)"
    ]
   },
   {
@@ -486,30 +498,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "LogisticRegression(random_state=1)"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import the LogisticRegression module from SKLearn\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "\n",
     "# Instantiate the Logistic Regression model\n",
     "# Assign a random_state parameter of 1 to the model\n",
-    "# YOUR CODE HERE!\n",
+    "logistic_regression_model = LogisticRegression(random_state = 1)\n",
     "\n",
     "# Fit the model using training data\n",
-    "# YOUR CODE HERE!"
+    "# using X_train and y_train\n",
+    "regression_model_fit = logistic_regression_model.fit(X_train, y_train)"
    ]
   },
   {
@@ -809,7 +811,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "dev",
    "language": "python",
    "name": "python3"
   },
@@ -823,7 +825,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "82c5080c271a5ad56d3a0dbf8dec21ac4157832278e14b3aad9946285959cdf7"
+   }
   }
  },
  "nbformat": 4,
