updated with confusion matrix

--- a/credit_risk_resampling.ipynb
+++ b/credit_risk_resampling.ipynb
@@ -523,12 +523,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Make a prediction using the testing data\n",
-    "# YOUR CODE HERE!"
+    "\n",
+    "# using X_test data for the prediction via regression model\n",
+    "regression_model_prediction = regression_model_fit.predict(X_test)"
    ]
   },
   {
@@ -546,45 +548,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9520479254722232"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Print the balanced_accuracy score of the model\n",
-    "# YOUR CODE HERE!"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[18663,   102],\n",
-       "       [   56,   563]])"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9520479254722232\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print the balanced_accuracy score of the model\n",
+    "model_balanced_accuracy_score = balanced_accuracy_score(y_test, regression_model_prediction)\n",
+    "\n",
+    "# using print function to print the score\n",
+    "print(model_balanced_accuracy_score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[18663   102]\n",
+      " [   56   563]]\n"
+     ]
     }
    ],
    "source": [
     "# Generate a confusion matrix for the model\n",
-    "# YOUR CODE HERE!"
+    "model_confusion_matrix = confusion_matrix(y_test, regression_model_prediction)\n",
+    "\n",
+    "# printing the confusion matrix\n",
+    "print(model_confusion_matrix)"
    ]
   },
   {
