using resampled training data

--- a/credit_risk_resampling.ipynb
+++ b/credit_risk_resampling.ipynb
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -610,7 +610,12 @@
    ],
    "source": [
     "# Print the classification report for the model\n",
-    "# YOUR CODE HERE!"
+    "\n",
+    "# creating calssification report instance with y_test and regression model prediction values\n",
+    "classification_report = classification_report_imbalanced(y_test, regression_model_prediction)\n",
+    "\n",
+    "# printing classification report\n",
+    "print(classification_report)"
    ]
   },
   {
@@ -621,12 +626,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "**Question:** How well does the logistic regression model predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "**Answer:** WRITE YOUR ANSWER HERE!"
+    "**Answer:** it seems pretty good based on the rec parameters at 0.99 for the healthy loan a('0') and at 0.91 for the high-risk loan ('1'). the Pre, spe and other classes seem relatively close to 1. The predictions seem pretty good overall"
    ]
   },
   {
@@ -652,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,33 +667,37 @@
     "\n",
     "# Instantiate the random oversampler model\n",
     "# # Assign a random_state parameter of 1 to the model\n",
-    "# YOUR CODE HERE!\n",
+    "random_oversampler_model = RandomOverSampler(random_state = 1)\n",
     "\n",
     "# Fit the original training data to the random_oversampler model\n",
-    "# YOUR CODE HERE!"
+    "# X_resampled for the features and y_resampled for the lables\n",
+    "# using the X_train and y_train data in the fit\n",
+    "X_resampled, y_resampled = random_oversampler_model.fit_resample(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1    56271\n",
        "0    56271\n",
+       "1    56271\n",
        "Name: loan_status, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Count the distinct values of the resampled labels data\n",
-    "# YOUR CODE HERE!"
+    "# y_resampled is the label data, using value_counts() function\n",
+    "\n",
+    "y_resampled.value_counts()"
    ]
   },
   {
