--- a/credit_risk_resampling.ipynb
+++ b/credit_risk_resampling.ipynb
@@ -715,13 +715,14 @@
    "source": [
     "# Instantiate the Logistic Regression model\n",
     "# Assign a random_state parameter of 1 to the model\n",
-    "# YOUR CODE HERE!\n",
+    "logistic_regression_model = LogisticRegression(random_state = 1)\n",
     "\n",
     "# Fit the model using the resampled training data\n",
-    "# YOUR CODE HERE!\n",
+    "logistic_regression_model_fit = logistic_regression_model.fit(X_resampled, y_resampled)\n",
     "\n",
     "# Make a prediction using the testing data\n",
-    "# YOUR CODE HERE!"
+    "# using X data to test because those are the features\n",
+    "logistic_regression_model_predict = logistic_regression_model_fit.predict(X_test)"
    ]
   },
   {
