created confusion matrix of predicted resampled data

--- a/credit_risk_resampling.ipynb
+++ b/credit_risk_resampling.ipynb
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -740,23 +740,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.9936781215845847"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9936781215845847\n"
+     ]
     }
    ],
    "source": [
     "# Print the balanced_accuracy score of the model \n",
-    "# YOUR CODE HERE!"
+    "model_balanced_accuracy_score = balanced_accuracy_score(y_test, logistic_regression_model_predict)\n",
+    "\n",
+    "# using print to see the score\n",
+    "print(model_balanced_accuracy_score)"
    ]
   },
   {
@@ -778,7 +778,10 @@
    ],
    "source": [
     "# Generate a confusion matrix for the model\n",
-    "# YOUR CODE HERE!"
+    "model_confusion_matrix = confusion_matrix(y_test, logistic_regression_model_predict)\n",
+    "\n",
+    "# printing confusion matrix\n",
+    "print(model_confusion_matrix)"
    ]
   },
   {
