completed challenge code and comments

--- a/credit_risk_resampling.ipynb
+++ b/credit_risk_resampling.ipynb
@@ -786,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -805,7 +805,11 @@
    ],
    "source": [
     "# Print the classification report for the model\n",
-    "# YOUR CODE HERE!"
+    "# using imbalanced for the imbalanced original data\n",
+    "model_classification_report = classification_report_imbalanced(y_test, logistic_regression_model_predict)\n",
+    "\n",
+    "# printing the model classification report\n",
+    "print(model_classification_report)"
    ]
   },
   {
@@ -816,12 +820,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "**Question:** How well does the logistic regression model, fit with oversampled data, predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "**Answer:** YOUR ANSWER HERE!"
+    "**Answer:** this logistic regression model seems close to perfect in predicting the data from nearly all measures. The rec parameter is at 0.99 for both the healthy loan and the high-risk loan classes (0 and 1 respectively). The pre parameters, spe, fl are all similarly high. Seems like a significant improvement in predictive power with the extra data manipulation."
    ]
   }
  ],
